//tracker.nci.nih.gov/browse/WCMSPERC-204 - Fixed template expander logic in doublehigh-expander.js - Hid "doublehigh-expand" class on mobile

--- a/CancerGov/_src/StyleSheets/_cthp.scss
+++ b/CancerGov/_src/StyleSheets/_cthp.scss
@@ -313,6 +313,11 @@ h3.cthp-overview-title {
 .doublehigh-expand { 
 	pointer-events: none;
 }
+@include bp(small) {
+	.doublehigh-expand { 
+		display: none;
+	}
+}
 /** End CTHP Overview styling */
 /** Begin CTHP Card styling */
 .cthp-content .cthp-treatment h3 {
